--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:id="@+id/switch1"
         android:layout_width="298dp"
         android:layout_height="27dp"
-        android:text="Switch"
+        android:text="Monitor Status"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
